--- a/cpp04/ex00/Makefile
+++ b/cpp04/ex00/Makefile
@@ -6,6 +6,8 @@ RM = rm -f
 FILES = ./Animal.cpp \
 		./Cat.cpp \
 		./Dog.cpp \
+		./WrongAnimal.cpp \
+		./WrongCat.cpp\
 		./main.cpp
 SRCS = $(FILES)
 OBJS = $(SRCS:.cpp=.o)
