--- a/cpp05/ex00/Makefile
+++ b/cpp05/ex00/Makefile
@@ -1,9 +1,9 @@
-NAME = Mommy, when I grow up, I want to be a bureaucrat!
+NAME = Bureaucrat
 CXX = c++
 CXXFLAGS = -Wall -Werror -Wextra -std=c++98
 RM = rm -f
 
-FILES = .Bureaucrat.cpp \
+FILES = ./Bureaucrat.cpp \
 		./main.cpp
 SRCS = $(FILES)
 OBJS = $(SRCS:.cpp=.o)
