--- a/cpp05/ex01/Makefile
+++ b/cpp05/ex01/Makefile
@@ -4,6 +4,7 @@ CXXFLAGS = -Wall -Werror -Wextra -std=c++98
 RM = rm -f
 
 FILES = ./Bureaucrat.cpp \
+		./Form.cpp \
 		./main.cpp
 SRCS = $(FILES)
 OBJS = $(SRCS:.cpp=.o)
