--- a/cpp06/ex02/Makefile
+++ b/cpp06/ex02/Makefile
@@ -1,10 +1,9 @@
-NAME = casting
+NAME = Dynamic
 CXX = c++
 CXXFLAGS = -Wall -Werror -Wextra -std=c++98
 RM = rm -f
 
-FILES =  \
-		./main.cpp
+FILES = ./main.cpp
 SRCS = $(FILES)
 OBJS = $(SRCS:.cpp=.o)
 
